--- a/index.html
+++ b/index.html
@@ -15,6 +15,38 @@
         <button class="btn" id="start">Start Game</button>
     </div>
 
+    <div class="screen">
+        <div class="stats">
+            <div class="info">
+                <p>Time: <span id="time">00:00</span></p>
+                <p>Hits: <span id="hits">0</span></p>
+                <p>Accuracy: <span id="accuracy">100%</span></p>
+            </div>
+        </div>
+        <div class="board" id="board">
+            <div class="circle"></div>
+        </div>
+
+        <div class="options">
+            <button class="btn restart">Restart</button>
+            <button class="btn stop">Stop</button>
+            <button class="btn" id=" fullscreen">Full Screen</button>
+            <button class="btn" id="minimise">Minimise</button>
+
+        </div>
+    </div>
+
+    <div class="screen">
+        <h1>Game Over</h1>
+        <div class="results">
+            <p>Time: <span id="time-over">00:00</span></p>
+            <p>Hits: <span id="hits-over">0</span></p>
+            <p>Accuracy: <span id="accuracy-over">0%</span></p>
+        </div>
+        <div class="btn restart">Restart</div>
+    </div>
+
+
 
 
 
