base of game almost done.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
     </div>
 
     <div class="screen">
+        <h1>Choose Time</h1>
+        <ul class="list" id="time-list">
+            <li>
+                <button class="btn time-btn" data-time="10">2 min</button>
+                <button class="btn time-btn" data-time="300">5 min</button>
+                <button class="btn time-btn" data-time="600">10 min</button>
+            </li>
+        </ul>
+    </div>
+
+    <div class="screen">
         <div class="stats">
             <div class="info">
                 <p>Time: <span id="time">00:00</span></p>
@@ -39,7 +50,6 @@
     <div class="screen">
         <h1>Game Over</h1>
         <div class="results">
-            <p>Time: <span id="time-over">00:00</span></p>
             <p>Hits: <span id="hits-over">0</span></p>
             <p>Accuracy: <span id="accuracy-over">0%</span></p>
         </div>
