--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <audio id="buttonClickSound" src="sounds/techclick.wav" preload="auto"></audio>
+    <audio id="buttonClickSound" src="sounds/scificlick.wav" preload="auto"></audio>
+
 
 
     <div class="screen">
